--- a/MyMVC/packages.config
+++ b/MyMVC/packages.config
@@ -3,8 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="Fonlow.TraceHub" version="1.0.0-Beta" targetFramework="net461" />
-  <package id="Fonlow.TraceHub.Core" version="1.0.0.0" targetFramework="net461" />
+  <package id="Fonlow.TraceHub" version="1.1.0" targetFramework="net461" />
+  <package id="Fonlow.TraceHub.Core" version="1.1.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.1.0" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
