--- a/MySPA/packages.config
+++ b/MySPA/packages.config
@@ -3,8 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="Fonlow.TraceHub" version="1.1.0" targetFramework="net461" />
-  <package id="Fonlow.TraceHub.Core" version="1.0.0.0" targetFramework="net461" />
+  <package id="Fonlow.TraceHub.Core" version="1.1.0.0" targetFramework="net461" />
+  <package id="Fonlow.TraceHub.MVC" version="1.1.0" targetFramework="net461" />
   <package id="jQuery" version="3.1.0" targetFramework="net461" />
   <package id="Knockout.Validation" version="2.0.3" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net461" />
